--- a/style/main.css
+++ b/style/main.css
@@ -1,32 +1,14 @@
-canvas { 
-    width: 100%; 
-    height: 100%;
+body { 
+    padding: 0;
+    margin: 0;
 }
 
 #info {
     position: fixed;
     top: 50px;
     left: 50px;
-    font-family: monospace;
-    font-size: 12px;
+    font-family: Verdana, monospace;
+    font-size: 35px;
     text-shadow: 0px 0px 2px #00f, 0px 0px 3px #00f, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000;
     color: #fff;
-}
-
-.info {
-    /* float: left; */
-    margin: 10px; 
-    width: 200px;
-}
-
-.red {
-    text-shadow: 0px 0px 2px #f00, 0px 0px 3px #f00, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
-}
-
-.green {
-    text-shadow: 0px 0px 2px #0f0, 0px 0px 3px #0f0, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
-}
-
-.blue {
-    text-shadow: 0px 0px 2px #09f, 0px 0px 3px #09f, 0px 0px 5px #000, 0px 0px 5px #000, 0px 0px 5px #000 !important;
 }
